Change the doclet to use the new doclet api, extracted doclet options in their own classes